--- a/bot/template/recipient.jinja2
+++ b/bot/template/recipient.jinja2
@@ -1,4 +1,4 @@
 Для подарка вы выбрали:
 
-{{ recipient.full_name }}
-Должность: {{ recipient.position }}
+{{ recipient['full_name'] }}
+Должность: {{ recipient['position'] }}
