--- a/bot/template/comment.jinja2
+++ b/bot/template/comment.jinja2
@@ -1,2 +1,2 @@
-Ваш заказ успешно взят в обработку
-Вы можете оставить комментарий или аудио сообщение
+Спасибо за ваш выбор, заказ принят в работу
+Вы также можете оставить комментарий по данному заказу текстовым или голосовым сообщением
