--- a/bot/template/error/no_gift.jinja2
+++ b/bot/template/error/no_gift.jinja2
@@ -1,2 +1,1 @@
-Пожалуйста, сообщите нам, почему не удалось выбрать подарок.
-Мы свяжемся с вами в срочном порядке и подберем подарок специально под вашу задачу
+К сожалению, не удалось подобрать подарок для получателя, оставьте свой комментарий, и мы подберем для вас новые варианты
