--- a/bot/template/comment.jinja2
+++ b/bot/template/comment.jinja2
@@ -1,2 +1,2 @@
-Спасибо за ваш выбор, заказ принят в работу
+Спасибо за ваш выбор, Ваш заказ #{{ order_id }} принят в работу
 Вы также можете оставить комментарий по данному заказу текстовым или голосовым сообщением
