--- a/bot/template/gift.jinja2
+++ b/bot/template/gift.jinja2
@@ -1,5 +1,8 @@
-Название: {{ gift.name }}
-Описание: {{ gift.description }}
+{{ gift.name }}
+
+{{ gift.description }}
+
 Тип: {{ type }}
 Пол: {{ sex }}
+
 Цена: {{ gift.price }}р
